# Cloud-Native-AI-Learn-Dapr-Docker-Kubernetes-

Class-1/claude-code-skills-lab-main/: main.py  pyproject.toml
Class-2/: README.md  main.py  pyproject.toml
task-api/: .env.example  .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  test_main.py
