[project]
name = "task-management-api"
version = "1.0.0"
description = "Task Management API with FastAPI, SQLModel, and Neon PostgreSQL"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlmodel==0.0.14",
    "psycopg2-binary==2.9.9",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "httpx==0.25.2",
    "black==23.12.0",
    "ruff==0.1.11",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
